[metadata]
name = codify
description = Generate codes
license = mit
description_file = README.md
long_description = text/markdown
long_description_content_type = text/markdown
keywords = 
		
root_url = https://github.com/thorwhalen/
author = Thor Whalen
display_name = codify

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

