[metadata]
name = codify
version = 0.0.1
url = https://github.com/thorwhalen/codify
platforms = any
description_file = README.md
description = Generate codes
license = mit
long_description = text/markdown
long_description_content_type = text/markdown
keywords = 
root_url = https://github.com/thorwhalen/
author = Thor Whalen
display_name = codify

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

