[metadata]
name = codify
version = 0.0.8
url = https://github.com/thorwhalen/codify
platforms = any
description_file = README.md
description = Generate codes
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
root_url = https://github.com/thorwhalen/
author = Thor Whalen
display_name = codify

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	qrcode
	lexis
	idiom

